# tsuuid-framework

./: .gitignore  CITATION.cff  COLLABORATORS.md  CONTRIBUTING.md  LICENSE  README.md  UPGRADE_PATH.md  index.html  pyproject.toml
.claude/sessions/: 20260405164600.768.json  20260405165844.768.json  20260405172426.768.json  20260405212534.768.json
.github/ISSUE_TEMPLATE/: collaboration.yml
TSUUID768/: project.yml
TSUUID768/TSUUID768/: App.swift  Info.plist  TSUUID768.entitlements
TSUUID768/TSUUID768.xcodeproj/: project.pbxproj
TSUUID768/TSUUID768/Services/: KnowledgeService.swift  ModelService.swift  PhotoUploadService.swift  SyncService.swift
TSUUID768/TSUUID768/ViewModels/: SearchViewModel.swift
TSUUIDKit/: Package.swift
TSUUIDKit/.build/: build.db  debug.yaml
docs/: RFC_TSUUID_URL_ID_Extension.md  RFC_UUID_v8_Semantic_Profile.md
src/examples/: 01_basic_encode_decode.py  03_concurrent_learning.py  06_inverse_scaling_demo.py  08_bitnet_backend.py  09_benchmark_backends.py  10_custom_model.py  11_delta_encoding.py
src/tsuuid/: __init__.py  bitnet_backend.py  bundle.py  causal_encoder.py  chain.py  chain_io.py  clip_768.py  codec.py  compose.py  delta.py  dimensions.py  dimensions_768.py  gold_standard.py  labse_768.py  labse_backend.py  llm_encoder.py  micro_translator.py  packing.py  sync_bundle.py  train_trit_translator.py
tests/: test_bitnet_backend.py  test_bundle.py  test_causal_encoder.py  test_codec.py  test_delta.py  test_sync_bundle.py  test_unified_producer.py
tools/: convert_clip_coreml.py  convert_labse_coreml.py  export_checkpoint.py  generate_test_fixtures.py  quantize_labse_int8.py  setup_device_models.sh  write_checkpoint_to_dropbox.sh
(+314 files in other folders)
